# solana-token2022-faucet

./: .gitignore  Anchor.toml  README.md  package.json
programs/faucet/: Cargo.toml
programs/faucet/src/: lib.rs
scripts/: faucet-claim.ts  faucet-initialize.ts
tests/: faucet.test.ts  utils.ts
